[package]
name = "rusty-injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faithe = "0.8.0"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading","Win32_Security",
    
]
